--- a/timkiem.html
+++ b/timkiem.html
@@ -145,9 +145,44 @@
 
         <div class="danhmuc row">
 
-            <div class="col-sm-2"></div>
+            <div class="col-sm-2" style="margin-left: 130px; margin-top: 5px;">
+                <div class="mucsach">
+                    <a href="timkiem.html">
+                    <input type="submit" value="Sách bán chạy"
+                        style="width: 211px;height: 38px;margin-left: 1px;">
+                    <input type="submit" value="Sách mới phát hành"
+                        style="width: 211px;height: 38px;margin-left: 1px;;margin-top: 2px;">
+                    <input type="submit" value="Sách sắp phát hành"
+                        style="width: 211px;height: 38px;margin-left: 1px;;margin-top: 2px;">
+                    <input type="submit" value="Sách ngoại văn"
+                        style="width: 211px;height: 38px;margin-left: 1px;margin-top: 2px;">
+                    <input type="submit" value="Sách blockchain"
+                        style="width: 211px;height: 38px;margin-left: 1px;margin-top: 2px;">
+                    <input type="submit" value="Sách kinh tế"
+                        style="width: 211px;height: 38px;margin-left: 1px;margin-top: 2px;">
+                    <input type="submit" value="Sách văn học trong nước"
+                        style="width: 211px;height: 38px;margin-left: 1px;margin-top: 2px;">
+                    <input type="submit" value="Sách văn học nước ngoài"
+                        style="width: 211px;height: 38px;margin-left: 1px;margin-top: 2px;">
+                    <input type="submit" value="Sách thường thức - đời sống"
+                        style="width: 211px;height: 38px;margin-left: 1px;margin-top: 2px;">
+                    <input type="submit" value="Sách thiếu nhi"
+                        style="width: 211px;height: 38px;margin-left: 1px;margin-top: 2px;">
+                    <input type="submit" value="Sách phát triển bản thân"
+                        style="width: 211px;height: 38px;margin-left: 1px;margin-top: 2px;">
+                    <input type="submit" value="Sách tin học ngoại ngữ"
+                        style="width: 211px;height: 38px;margin-left: 1px;margin-top: 2px;">
+                    <input type="submit" value="Sách chuyên ngành"
+                        style="width: 211px;height: 38px;margin-left: 1px;margin-top: 2px;">
+                    <input type="submit" value="Sách giáo khoa - giáo trình"
+                        style="width: 211px;height: 38px;margin-left: 1px;margin-top: 2px;">
+                    <input type="submit" value="tạp chí - văn phòng phẩm"
+                        style="width: 211px;height: 38px;margin-left: 1px;margin-top: 2px;">
+                </a>
+                </div>
+            </div>
             <div class="col-sm-8" style="padding-left: 130px;">
-
+            <span style="color: #087B44; font-size: 18px; margin-left: 10px;">search by name</span>
 
 
                 <div>
@@ -166,8 +201,81 @@
                 </div>
             </div>
             <div class="col-sm-2"></div>
-
         </div>
+
+
+<div class="dk7 row">
+            <div class="col-sm-4">
+                <span style="color: white;">
+                    <h3 style="margin-left: 150px;">ĐĂNG KÝ NHẬN EMAIL</h3>
+                </span>
+                <span>
+                    <h5 style="margin-left: 150px; color: white;">Đăng ký thông tin sách mới, sách bán</h5>
+                </span>
+            </div>
+            <div class="col-sm-2">
+                <span>
+                    <input type="text" placeholder="Tên của bạn"
+                        style="margin-top: 25px; width: 200px;height: 35px; border-radius: 8px; border: hidden;">
+                </span>
+            </div>
+            <div class="col-sm-2">
+                <span>
+                    <input type="text" placeholder="Nhập email của bạn"
+                        style="margin-top: 25px; width: 200px;height: 35px; border-radius: 8px; border: hidden;">
+                </span>
+            </div>
+            <div class="col-sm-4">
+                <span>
+                    <a href="dangky.html">
+                        <input type="submit" value="ĐĂNG KÝ NGAY"
+                            style="margin-top: 25px; width: 200px;height: 35px; border-radius: 8px; border: hidden; color: #087B44;">
+                    </a>
+                </span>
+            </div>
+        </div>
+
+
+
+        <div class="chan row">
+            <div class="col-sm-3" >
+                <span style="margin-left: 200px;">Về công ty</span><br>
+                <span style="margin-left: 200px; color: rgb(116, 117, 118);"> Giới thiệu công ty</span>
+                <span style="margin-left: 200px; color: rgb(116, 117, 118);"> Tuyển dụng</span>
+                <span style="margin-left: 200px; color: rgb(116, 117, 118);"> Góc báo chí</span>
+                <span style="margin-left: 200px; color: rgb(116, 117, 118);"> Chương trình đại lý</span>
+                <span style="margin-left: 200px; color: rgb(116, 117, 118);"> Chính sách bảo mật</span>
+                <span style="margin-left: 200px; color: rgb(116, 117, 118);"> Chính sách đổi trả</span>
+            </div>
+            <div class="col-sm-2" >
+                <span style="margin-left: 35px;">Trợ giúp</span><br>
+                <span style=" margin-left: 35px;color: rgb(116, 117, 118);"> Quy định sử dụng</span><br>
+                <span style=" margin-left: 35px;color: rgb(116, 117, 118);">Hướng dẫn Mua Hàng</span><br>
+                <span style="margin-left: 35px;color: rgb(116, 117, 118);"> Phương thức thanh toán</span><br>
+                <span style="margin-left: 35px;color: rgb(116, 117, 118);"> Phương thức vận chuyển</span><br>
+                <span style="margin-left: 35px;color: rgb(116, 117, 118);"> Câu hỏi thường gặp</span><br>
+                <span style="margin-left: 35px; color: rgb(116, 117, 118);"> Ứng dụng ebook</span><br>
+            </div>
+            <div class="col-sm-2" >
+                <span style="margin-left: 35px;">Tin tức sách</span><br>
+                <span style=" margin-left: 35px;color: rgb(116, 117, 118);"> Tin tức</span><br>
+                <span style=" margin-left: 35px;color: rgb(116, 117, 118);">Chân dung</span><br>
+                <span style="margin-left: 35px;color: rgb(116, 117, 118);"> Điểm sách</span><br>
+                <span style="margin-left: 35px;color: rgb(116, 117, 118);"> Phê bình</span><br>
+            </div>
+            <div class="col-sm-5">
+                <span style="font-size: 20px;margin-left: 20px;">Tải ứng dụng trên điện thoại</span><br><br>
+                <a href="https://play.google.com/store/apps/details?id=com.vinabook.vnbecommerce">
+                <img src="anh/gooleplay.png">
+                </a>
+                <a href="https://apps.apple.com/us/app/vinabook-com-mua-s%C3%A1ch-online/id1035230685">
+                <img src="anh/appsto.png" style="margin-left: 20px;">
+                </a>
+            </div>
+        </div>
+
+
+
     </div>
 
 
