--- a/giohang.html
+++ b/giohang.html
@@ -37,25 +37,32 @@
             <div class="col-sm-7">
                 <div class="card-body"
                     style="border: 1px solid rgb(207, 204, 204); width: 700px; margin-left: 200px; border-radius: 5px;margin-top: 50px;">
-
-                    <span style="font-size: 17px; color: #117c47;margin-left: 50px;">Sản phẩm</span><br>
+                    <div class="row">
+                        <div class="col-10">
+                            <span style="font-size: 17px; color: #117c47;margin-left: 50px;">Sản phẩm</span>
+                        </div>
+                        <div class="col-2">
+                            <i class="fa fa-refresh fa-spin" style="font-size:24px; cursor: pointer;" v-on:click="reset()" ></i>
+                        </div>
+                    </div>
+                    <br>
                     <div class="container mt-3"></div>
-                    <div class="d-flex mb-3" v-for="item in carts">
+                    <div class="d-flex mb-3" v-for="(item, index) in carts">
                         <div class="p-2 bg-white"><img v-bind:src="item.anh_bia" class="anhgh"></div>
                         <div class="p-2 flex-grow-1 bg-white">
                             <span style="margin-left: 20px;">{{item.ten_sach}}</span><br>
-                            <input type="button" value="-" style="margin-top: 10px; width: 30px;margin-left: 30px;">
-                            <input type="text" v-bind:value="item.numb" readonly style="width: 35px;padding-left: 10px;">
-                            <input type="button" value="+" style="margin-top: 10px; width: 30px;" >
+                            <input type="button" value="-" style="margin-top: 10px; width: 30px;margin-left: 30px;"
+                                v-on:click="minusCart(index)">
+                            <input type="text" v-bind:value="item.numb" readonly
+                                style="width: 35px;padding-left: 10px;">
+                            <input type="button" value="+" style="margin-top: 10px; width: 30px;"
+                                v-on:click="addCart(index)">
                         </div>
                         <div class="p-2 bg-white">
-                            <span>{{item.numb}} x 199.000đ</span><br>
-                            <i class="fa fa-trash" style="margin-left: 70px;"></i>
+                            <span>{{item.numb}} x {{item.gia_sach}}đ</span><br>
+                            <i class="fa fa-trash" style="margin-left: 70px; cursor: pointer;" v-on:click="deleteItem(index)"></i>
                         </div>
                     </div>
-
-
-
                 </div>
             </div>
 
@@ -67,16 +74,31 @@
                         <span style="color:white; margin-left: 80px;">Tóm tắt đơn hàng</span>
                     </div>
                     <div class="card-body">
-                        <span>Sản phẩm</span>
-                        <span style="margin-left: 210px;">1</span><br>
+                        <span>Số lượng SP:</span>
+                        <span style="margin-left: 150px;">{{count()}}</span><br>
                         <span>Phí vận chuyển</span>
                         <span style="margin-left: 123px;">Miễn phí</span><br>
                         <span>Tạm Tính</span>
-                        <span style="color: #087B44;margin-left: 160px;">190.000 đ</span><br><br>
+                        <span style="color: #087B44;margin-left: 160px;">{{total()}} đ</span><br><br>
                         <div class="hr"></div>
                         <span>Tổng cộng</span>
-                        <span style="color: #087B44;margin-left: 150px;">190.000 đ</span>
+                        <span style="color: #087B44;margin-left: 150px;">{{total()}} đ</span>
 
+                    </div>
+                    <div class="row">
+                        <div class="col-6">
+                            <button type="button"
+                                style="background-color: darkgrey;color: white;border-radius: 3px; border: hidden;width: 170px; height:40px;">
+                                <a href="http://bansach.com/index.html"> Quay lại </a>
+                            </button>
+                        </div>
+                        <div class="col-6">
+
+                            <button type="button" class="btn" data-toggle="modal" data-target="#my"
+                                style=" background-color: rgb(237, 206, 33);width: 170px; height:40px;">Thanh
+                                toán
+                            </button>
+                        </div>
                     </div>
                 </div>
 
@@ -85,15 +107,7 @@
 
 
             <div class="gh6">
-                <a href="http://bansach.com/index.html">
-                    <button type="button"
-                        style="margin-left: 600px; width: 170px; height:40px;background-color: darkgrey;color: white;border-radius: 3px; border: hidden;">Quay
-                        lại</button>
-                </a>
 
-                <button type="button" class="btn" data-toggle="modal" data-target="#my"
-                    style="margin-left: 20px; background-color: rgb(237, 206, 33);width: 170px; height:40px;">Thanh
-                    toán</button>
 
                 <div class="modal" id="my">
                     <div class="modal-dialog-centered " style="width: 500px;margin-left: 500px;">
